@@ -1,4 +1,5 @@
 ncmpc 0.21 - not yet released
+* add a chat screen for communication with other clients on the same server
 
 
 ncmpc 0.20 - (02/05/2012)
